Add grayscale controller and rename contacts to kmeans

--- a/ContactList/ProcessingAPI.csproj
+++ b/ContactList/ProcessingAPI.csproj
@@ -91,11 +91,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\ContactsController.cs" />
+    <Compile Include="Controllers\GrayscaleController.cs" />
+    <Compile Include="Controllers\KMeansController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Contact.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
